--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
                     a.innerText = "Login";
                 }
                 $(".user-name").append(a);
-                $(".user-operation").append(operation);
+                $(".user-operation-box").append(operation);
 
                 {#execue functions#}
                 $(document).trigger("sessionLoaded");
