--- a/templates/buyerInfo.html
+++ b/templates/buyerInfo.html
@@ -97,7 +97,7 @@
         </div>
 
         <div class="delete-user-box">
-            <button type="button" class="delete-user-button" onclick="delete_user(phone)"></button>
+            <button type="button" class="delete-user-button" onclick="delete_user(phone)">Delete User</button>
         </div>
     </div>
 
