--- a/templates/register.html
+++ b/templates/register.html
@@ -89,7 +89,7 @@ register
     </div>
 
     <div class="phone">
-        <input type="text" id="phone" placeholder="phone" onclick="phone_is_valid()">
+        <input type="text" id="phone" placeholder="phone" onkeyup="phone_is_valid()">
     </div>
 
     <div class="password">
