--- a/templates/sellerInfo.html
+++ b/templates/sellerInfo.html
@@ -96,7 +96,7 @@
         </div>
 
         <div class="delete-user-box">
-            <button type="button" class="delete-user-button" onclick="delete_user(phone)"></button>
+            <button type="button" class="delete-user-button" onclick="delete_user(phone)">Delete User</button>
         </div>
     </div>
 {% endblock %}
