--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,6 @@
     <script>
     let phone;
     let type;
-    let name;
     let light_mode;
     const isAdmin = false;
 
@@ -50,7 +49,6 @@
                 {#session exist, load session#}
                 phone = data.phone;
                 type = data.type;
-                name = data.name;
 
 
                 const mode_button = $(".mode-button")
@@ -62,15 +60,16 @@
 
                 {#generate tag#}
                 const a = document.createElement("a");
+                a.setAttribute("id", "user-name")
                 const operation = document.createElement("a")
                 if (type==="0"){
                     a.setAttribute("href", "/sellerInfo");
-                    a.innerText = name;
+                    a.innerText = data.status==='active'?data.name:data.name+' (blocked)';
                     operation.setAttribute("href", "/sellerAdd")
                     operation.innerText = "Add Item";
                 }else if(type==="1") {
                     a.setAttribute("href", "/buyerInfo");
-                    a.innerText = name;
+                    a.innerText = data.status==='active'?data.name:data.name+' (blocked)';
                     operation.setAttribute("href", "/buyerItem")
                     operation.innerText = "My Item";
                 }else{
