--- a/templates/itemBuyer.html
+++ b/templates/itemBuyer.html
@@ -40,7 +40,7 @@
     <script src="/static/js/render_comment.js"></script>
     <script src="/static/js/render_item_info.js"></script>
     <script src="/static/js/render_basic_comment.js"></script>
-    <script src="/static/js/is_item_match_seller.js"></script>
+    <script src="/static/js/buy_item.js"></script>
     <script>
     let product_id = "{{ product_id }}"
     let info_box;
