--- a/templates/base_begin.html
+++ b/templates/base_begin.html
@@ -21,7 +21,11 @@
 {% block main %}
     <link rel="stylesheet" href="/static/css/base_begin.css">
     <div class="left-box">
-        <img src="/static/img/login-logo.png" alt="login-logo">
+        {% if user_mode=='dark-mode' %}
+            <img class="login-logo-img" src="/static/img/login-logo-dark.png" alt="login-logo">
+        {% else %}
+            <img class="login-logo-img" src="/static/img/login-logo.png" alt="login-logo">
+        {% endif %}
     </div>
     <div class="right-box">
         {% block right_box %} {% endblock %}
