--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Admin</title>
     <script src="https://code.jquery.com/jquery-latest.js"></script>
+    <script src="/static/js/logout.js"></script>
     <script>
         const admin_phone = "zzzaaa";
         const isAdmin = true;
@@ -16,6 +17,7 @@
     <button type="button" class="nav-button" onclick="window.location.href = '/buyerItemManage'">Purchased Manage</button>
     <button type="button" class="nav-button" onclick="window.location.href = '/itemManage'">Product Manage</button>
     <button type="button" class="nav-button" onclick="window.location.href = '/commentManage'">Comment Manage</button>
+    <button type="button" class="nav-button" onclick="logout()">Logout</button>
 </div>
 {% block body %}{% endblock %}
 </body>
