--- a/static/css/shop.css
+++ b/static/css/shop.css
@@ -10,6 +10,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0;
 }
 
 .item {
