--- a/static/css/item.css
+++ b/static/css/item.css
@@ -20,9 +20,22 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-content: center;
+}
+
+.item-img-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .buy-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.operation-box{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -55,6 +68,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    justify-content: center;
 }
 
 .comment-box div,
@@ -85,7 +99,7 @@
     color: var(--text-color);
 
     font-size: 1.125rem;
-    margin: 1rem 0;
+    margin: 1rem 1rem;
     height: 2rem;
 }
 
