--- a/templates/itemSeller.html
+++ b/templates/itemSeller.html
@@ -39,7 +39,7 @@
 {% block script %}
     <script src="/static/js/render_comment.js"></script>
     <script src="/static/js/render_item_info.js"></script>
-    <script src="/static/js/render_basic_comment.js"></script>
+    <script src="/js/render_product_basic_comment.js"></script>
     <script src="/static/js/modify_item_info.js"></script>
     <script src="/static/js/delete_item.js"></script>
     <script src="/static/js/upload_item_image.js"></script>
@@ -52,7 +52,7 @@
     {#when session is loaded#}
     $(document).on("sessionLoaded", function () {
         render_item_info(product_id)
-        render_basic_comment($(".comment-box"), product_id)
+        render_product_basic_comment($(".comment-box"), product_id)
     });
     </script>
 {% endblock %}
