--- a/templates/commentManage.html
+++ b/templates/commentManage.html
@@ -1,16 +1,29 @@
 {% extends "base_admin.html" %}
 
 {% block script %}
-    <script src="/static/js/render_comment.js"></script>
+    <script src="/static/js/render_all_comment.js"></script>
     <script>
 
     window.onload = function (){
-        get_and_render_comment();
+        render_all_comment($(".comment-box"));
     }
+    </script>
 
 
 {% endblock %}
 
 {% block body %}
+
+<div class="comment-container">
+    <div class="comment-title">
+        <span class="comment-id">ID</span>
+        <span class="commenter-img">Image</span>
+        <span class="commenter-name">Name</span>
+        <span class="comment-rating">Rating</span>
+        <span class="comment-content">Content</span>
+        <span class="comment-operation">Operation</span>
+    </div>
+    <div class="comment-box"></div>
+</div>
 
 {% endblock %}
