--- a/templates/buyerManage.html
+++ b/templates/buyerManage.html
@@ -2,7 +2,9 @@
 
 {% block script %}
     <script src="/static/js/render_user_info.js"></script>
+    <script src="/static/js/modify_balance.js"></script>
     <script src="/static/js/get_user_image.js"></script>
+    <script src="/static/js/render_money.js"></script>
     <script src="/static/js/reset_user_introduction.js"></script>
     <script src="/static/js/reset_user_name.js"></script>
     <script src="/static/js/reset_user_image.js"></script>
@@ -13,6 +15,7 @@
     window.onload = function (){
         get_user_image($(".user-image"), phone)
         render_user_info(type, phone);
+        render_money($(".current-money"), phone)
     }
     </script>
 {% endblock %}
@@ -64,7 +67,7 @@
             </div>
 
             <div class="submit-charge-div">
-                <button class="submit-charge" type="button" onclick="charge($('.current-money'), $('#charge-money'), phone)">Charge</button>
+                <button class="submit-charge" type="button" onclick="modify_balance($('.current-money'), $('#charge-money'), phone)">Modify</button>
             </div>
         </div>
     </div>
