--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -16,7 +16,7 @@
 <div class="nav-bar">
     <button type="button" class="nav-button" onclick="window.location.href = '/admin'">User Manage</button>
     <button type="button" class="nav-button" onclick="window.location.href = '/buyerItemManage'">Purchased Manage</button>
-    <button type="button" class="nav-button" onclick="window.location.href = '/itemManage'">Product Manage</button>
+    <button type="button" class="nav-button" onclick="window.location.href = '/shopManage'">Product Manage</button>
     <button type="button" class="nav-button" onclick="window.location.href = '/commentManage'">Comment Manage</button>
     <button type="button" class="nav-button" onclick="window.location.href = '/logManage'">Log Manage</button>
     <button type="button" class="nav-button" onclick="logout()">Logout</button>
