--- a/templates/buyerItemManage.html
+++ b/templates/buyerItemManage.html
@@ -1,10 +1,12 @@
 {% extends "base_admin.html" %}
 
 {% block script %}
-    <script src="/static/js/render_buyer_purchased_items.js"></script>
+    <script src="/static/js/render_purchased_items.js"></script>
     <script>
+    let purchased_item_box;
 
     window.onload = function (){
+        purchased_item_box = $(".purchased-item-box");
         get_and_render_purchased_items()
     }
 
@@ -16,7 +18,7 @@
             admin_phone: admin_phone
         },
         success:function (data){
-            render_buyer_purchased_items($(".purchased-item-box"), data)
+            render_purchased_items(data)
         }
     })
 }
