--- a/templates/buyerItem.html
+++ b/templates/buyerItem.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block script %}
-    <script src="/static/js/render_purchased_items.js"></script>
+    <script src="/static/js/render_buyer_purchased_items.js"></script>
     <script>
 
     $(document).on("sessionLoaded", function (){
@@ -14,7 +14,7 @@
             type:"get",
             data:{phone: phone},
             success:function (data){
-                render_purchased_items($(".purchased-item-box"), data)
+                render_buyer_purchased_items($(".purchased-item-box"), data)
             }
         })
     }
