--- a/templates/itemManage.html
+++ b/templates/itemManage.html
@@ -42,10 +42,10 @@
 
 <div class="right-box">
     <div class="reset-img-box">
-        <button class="reset-rating-button" type="button" onclick="reset_item_image($('#item-img'), product_id)">Reset Image</button>
+        <button class="reset-image-button" type="button" onclick="reset_item_image($('#item-img'), product_id)">Reset Image</button>
     </div>
     <div class="reset-name-box">
-        <button class="reset-rating-button" type="button" onclick="reset_item_name($('#item-name'), product_id)">Reset Name</button>
+        <button class="reset-name-button" type="button" onclick="reset_item_name($('#item-name'), product_id)">Reset Name</button>
     </div>
 </div>
 {% endblock %}
