--- a/templates/sellerInfo.html
+++ b/templates/sellerInfo.html
@@ -9,7 +9,7 @@
     4. render_money
     5. charge
     6. get_and_render_purchased_items
-    7. render_purchased_items
+    7. render_buyer_purchased_items
 
     Using js:
     1. alert.js (Extends)
