--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@ login
                         console.log("dddddddd")
                     }else {
                         {#success login: render previous page#}
-                        window.location.href = document.referrer
+                        window.location.href = '/shop'
                     }
                 } else {
 
