--- a/templates/item.html
+++ b/templates/item.html
@@ -82,7 +82,7 @@
 <div class="right-box">
     <div class="comment-box"></div>
     <div class="more-comment-box">
-        <button class="more-comment-button" type="button" onclick="window.location.href = '/comment'"></button>
+        <button class="more-comment-button" type="button" onclick="window.location.href = '/login'">More Comment</button>
     </div>
 </div>
 
