--- a/templates/itemSeller.html
+++ b/templates/itemSeller.html
@@ -100,7 +100,7 @@
 <div class="right-box">
     <div class="comment-box"></div>
     <div class="more-comment-box">
-        <button class="more-comment-button" type="button" onclick="window.location.href = '/comment'">More Comment</button>
+        <button class="more-comment-button" type="button" onclick="window.location.href = '/comment?product_id=' + product_id +'&phone=' + phone">More Comment</button>
     </div>
 </div>
 
