--- a/templates/sellerAdd.html
+++ b/templates/sellerAdd.html
@@ -21,6 +21,7 @@
 
 {% block script %}
     <script src="/static/js/upload_item_image.js"></script>
+    <script src="/static/js/get_item_image.js"></script>
     <script>
     let container
     $(document).on("sessionLoaded", function (){
