--- a/templates/buyerManage.html
+++ b/templates/buyerManage.html
@@ -8,13 +8,15 @@
     <script src="/static/js/reset_user_introduction.js"></script>
     <script src="/static/js/reset_user_name.js"></script>
     <script src="/static/js/reset_user_image.js"></script>
+    <script src="/static/js/ban_user.js"></script>
     <script>
     let phone = "{{ phone }}"
-    let type = "1"
+    let status;
+    let user_type = "1"
 
     window.onload = function (){
         get_user_image($(".user-image"), phone)
-        render_user_info(type, phone);
+        render_user_info(user_type, phone);
         render_money($(".current-money"), phone)
     }
     </script>
@@ -43,6 +45,10 @@
             <div class="info-div" id="password-div">
                 <span id="password-span"></span>
             </div>
+
+            <div class="info-div" id="status-div">
+                <span id="status-span"></span>
+            </div>
         </form>
 
         <div class="operation-box">
@@ -50,10 +56,13 @@
                 <button type="button" onclick="reset_user_image($('.user-image'), phone)" class="operation-button">Reset Image</button>
             </div>
             <div class="reset-user-name">
-                <button type="button" onclick="reset_user_name(type, phone)" class="operation-button">Reset Name</button>
+                <button type="button" onclick="reset_user_name(user_type, phone)" class="operation-button">Reset Name</button>
             </div>
             <div class="reset-user-introduction">
-                <button type="button" onclick="reset_user_introduction(type, phone)" class="operation-button">Reset Introduction</button>
+                <button type="button" onclick="reset_user_introduction(user_type, phone)" class="operation-button">Reset Introduction</button>
+            </div>
+            <div class="ban-user">
+                <button type="button" id="ban-user-button" onclick="if(!confirm(status)){return;}ban_user(user_type, admin_phone, phone)">Ban User</button>
             </div>
         </div>
 
