--- a/templates/commentManage.html
+++ b/templates/commentManage.html
@@ -2,6 +2,7 @@
 
 {% block script %}
     <script src="/static/js/render_all_comment.js"></script>
+    <script src="/static/js/delete_comment.js"></script>
     <script>
 
     window.onload = function (){
