--- a/templates/sellerManage.html
+++ b/templates/sellerManage.html
@@ -14,6 +14,7 @@
     window.onload = function (){
         get_user_image($(".user-image"), phone)
         render_user_info(user_type, phone);
+        $("#phone-span").text(phone)
     }
     </script>
 {% endblock %}
@@ -27,22 +28,22 @@
 
         <form class="info-form">
             <div class="info-div" id="phone-div">
+                Phone:
                 <span id="phone-span"></span>
             </div>
 
             <div class="info-div" id="name-div">
+                Name:
                 <span id="name-span"></span>
             </div>
 
             <div class="info-div" id="introduction-div">
+                Introduction:
                 <span id="introduction-span"></span>
             </div>
 
-            <div class="info-div" id="password-div">
-                <span id="password-span"></span>
-            </div>
-
             <div class="info-div" id="status-div">
+                Status:
                 <span id="status-span"></span>
             </div>
         </form>
@@ -55,10 +56,10 @@
                 <button type="button" onclick="reset_user_name(user_type, phone)" class="operation-button">Reset Name</button>
             </div>
             <div class="reset-user-introduction">
-                <button type="button" id="ban-user-button" onclick="if(!confirm(status)){return;}ban_user(user_type, admin_phone, phone)">Ban User</button>
+                <button type="button" onclick="reset_user_introduction(user_type, phone)" class="operation-button">Reset Introduction</button>
             </div>
             <div class="ban-user">
-                <button type="button" onclick="ban_user(admin_phone, phone)">Ban User</button>
+                <button type="button" id="ban-user-button" onclick="if(!confirm(status)){return;}ban_user(user_type, admin_phone, phone)">Ban User</button>
             </div>
         </div>
     </div>
