--- a/templates/itemManage.html
+++ b/templates/itemManage.html
@@ -2,6 +2,10 @@
 
 {% block script %}
     <script src="/static/js/render_item_info.js"></script>
+    <script src="/static/js/reset_item_image.js"></script>
+    <script src="/static/js/reset_item_name.js"></script>
+    <script src="/static/js/render_item_info.js"></script>
+    <script src="/static/js/get_item_image.js"></script>
     <script>
         let product_id = "{{ product_id }}"
 
