--- a/templates/buyerInfo.html
+++ b/templates/buyerInfo.html
@@ -89,7 +89,7 @@
         </form>
 
         <div class="confirm-box">
-            <button type="button" class="confirm-button" onclick="modify_user_info(new FormData($('.info-form')[0]))">Confirm</button>
+            <button type="button" class="confirm-button" onclick="modify_user_info(phone, $('#introduction'), $('#name'), $('#password'), '1')">Confirm</button>
         </div>
 
         <div class="logout-box">
