--- a/templates/sellerInfo.html
+++ b/templates/sellerInfo.html
@@ -88,7 +88,7 @@
         </form>
 
         <div class="confirm-box">
-            <button type="button" class="confirm-button" onclick="modify_user_info(new FormData($('.info-form')[0]))">Confirm</button>
+            <button type="button" class="confirm-button" onclick="modify_user_info(phone, $('#introduction'), $('#name'), $('#password'), '0')">Confirm</button>
         </div>
 
         <div class="logout-box">
