--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,7 +7,7 @@
 
     window.onload = function (){
         users_box = $(".users-box")
-        render_users();
+        render_users(admin_phone);
     }
     </script>
 {% endblock %}
