--- a/templates/itemManage.html
+++ b/templates/itemManage.html
@@ -49,7 +49,7 @@
         <button class="reset-image-button" type="button" onclick="reset_item_image($('#item-img'), product_id)">Reset Image</button>
     </div>
     <div class="reset-name-box">
-        <button class="reset-name-button" type="button" onclick="reset_item_name($('#item-name'), product_id)">Reset Name</button>
+        <button class="reset-name-button" type="button" onclick="reset_item_name(product_id)">Reset Name</button>
     </div>
 </div>
 {% endblock %}
