--- a/templates/sellerInfo.html
+++ b/templates/sellerInfo.html
@@ -23,6 +23,10 @@
 #}
 {% extends "base.html" %}
 
+{% block css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/sellerInfo.css') }}">
+{% endblock %}
+
 {% block script %}
     <script src="/static/js/modify_user_info.js"></script>
     <script src="/static/js/render_user_info.js"></script>
