--- a/static/css/base_begin.css
+++ b/static/css/base_begin.css
@@ -19,7 +19,7 @@
     width: 100%;
     height: 100%;
     /* keep the aspect ratio of the image, cut the extra part */
-    object-fit: cover;
+    object-fit: fill;
     /* set the image fill the left-box */
     position: absolute;
     top: 0;
