--- a/static/css/item.css
+++ b/static/css/item.css
@@ -2,7 +2,7 @@
     The following code is the CSS for the item page (itemBuyer.html).
 */
 
-.comment-box,
+.right-box,
 .left-box {
     border: 2px solid var(--comment-border-color);
     border-radius: 10px;
@@ -15,6 +15,7 @@
     transition: background-color 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
+
 .left-box {
     flex: 3;
     display: flex;
@@ -23,17 +24,74 @@
     align-content: center;
 }
 
+.right-box{
+    flex:3;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.info-box {
+    flex: 10;
+    padding: 10px;
+    margin: 10px;
+    flex-direction: column;
+    display: flex;
+    font-size: 25px;
+
+}
+
+.info-box > div {
+    flex: 1;
+    display: flex;
+    align-items: center;
+
+}
+
+
+/*.item-rating-box{*/
+/*    margin-top: 5px;*/
+/*}*/
+
+.seller-box {
+    flex: 1;
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.buyer-box {
+    flex: 1;
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.buy-amount-box{
+    margin-right: 10px;
+}
+
+.buy-box {
+    margin-right: 10px;
+}
+.delete-box {
+    /*padding: 10px;*/
+    /*margin: 10px;*/
+}
+
+
+
+
 .item-img-box{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.buy-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
 
 .operation-box{
     display: flex;
@@ -42,10 +100,41 @@
 }
 
 .comment-box {
-    flex: 7;
+    flex: 10;
     position: relative;
     overflow-y: auto;
 }
+
+.more-comment-box {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background-color: var(--comment-text-area-bg-color);
+    border-radius: var(--comment-text-area-border-radius);
+    margin: 10px;
+}
+
+.more-comment-box button {
+    background-color: var(--comment-button-bg-color);
+    color: var(--comment-button-text-color);
+    border: none;
+    border-radius: 10px;
+    padding: 0.75rem 1.5rem;
+    cursor: pointer;
+    font-size: 1.25rem;
+    text-align: center;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.more-comment-box button:hover {
+    background-color: var(--comment-button-hover-bg-color);
+    color: var(--comment-button-hover-text-color);
+    font-style: italic;
+    box-shadow: 0 2px 5px var(--comment-box-shadow);
+}
+
 
 .comment-text {
     display: flex;
@@ -71,16 +160,19 @@
     justify-content: center;
 }
 
-.comment-box div,
-.left-box div {
-    margin: 0.5rem 1rem;
+.comment-box div{
+    margin: 10px;
     background-color: var(--comment-text-area-bg-color);
     padding: 0.5rem;
     border-radius: var(--comment-text-area-border-radius);
 }
 
-.comment-box span,
-.left-box span {
+.left-box div {
+    background-color: var(--comment-text-area-bg-color);
+    border-radius: var(--comment-text-area-border-radius);
+}
+
+.comment-box span{
     display: block;
     background-color: var(--comment-span-bg-color);
     font-size: 1.25rem;
@@ -91,6 +183,10 @@
     overflow-wrap: break-word;
 }
 
+
+
+
+
 .left-box input {
     border: rgb(0, 0, 0, 0.0);
     border-radius: 5px;
@@ -98,18 +194,97 @@
     background-color: var(--comment-span-bg-color);
     color: var(--text-color);
 
-    font-size: 1.125rem;
-    margin: 1rem 1rem;
+    font-size: 25px;
+    /*margin-left: 5rem;*/
     height: 2rem;
 }
+
+
+.item-name-box input{
+    margin-left: 90px;
+}
+
+.item-rating-box input{
+    margin-left: 85px;
+}
+
+.item-description-box input{
+    margin-left: 32px;
+}
+
+.item-price-box input{
+    margin-left: 98px;
+}
+
+.item-storage-box input{
+    margin-left: 72px;
+}
+
+/*input和span分界线*/
+
+.item-name-box > span:nth-child(2){
+    margin-left: 90px;
+}
+.item-rating-box > span:nth-child(2){
+    margin-left: 85px;
+}
+
+.item-description-box > span:nth-child(2){
+    margin-left: 32px;
+}
+
+.item-price-box > span:nth-child(2){
+    margin-left: 98px;
+}
+
+.item-storage-box > span:nth-child(2){
+    margin-left: 72px;
+}
+
+
 
 
 .left-box input::placeholder {
     color: var(--text-color);
 }
 
-.left-box button,
-.comment-box button {
+/*.left-box button,*/
+/*.comment-box button {*/
+/*    background-color: var(--comment-button-bg-color);*/
+/*    color: var(--comment-button-text-color);*/
+/*    border: none;*/
+/*    border-radius: 10px;*/
+/*    padding: 0.75rem 1.5rem;*/
+/*    cursor: pointer;*/
+/*    font-size: 1.25rem;*/
+/*    text-align: center;*/
+/*    transition: background-color 0.3s, color 0.3s;*/
+/*}*/
+
+.item-img-box button{
+    background-color: var(--comment-text-area-bg-color);
+    color: var(--comment-button-text-color);
+    border: none;
+    border-radius: 10px;
+    padding: 0.75rem 1.5rem;
+    cursor: pointer;
+    font-size: 1.25rem;
+    text-align: center;
+}
+
+.seller-box button{
+    background-color: var(--comment-button-bg-color);
+    color: var(--comment-button-text-color);
+    border: none;
+    border-radius: 10px;
+    padding: 0.75rem 1.5rem;
+    cursor: pointer;
+    font-size: 1.25rem;
+    text-align: center;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.buy-box button{
     background-color: var(--comment-button-bg-color);
     color: var(--comment-button-text-color);
     border: none;
