--- a/static/css/shop.css
+++ b/static/css/shop.css
@@ -31,29 +31,54 @@
     background: transparent;
     cursor: pointer;
 }
-.item div{
-    margin-top: 20px;
-    margin-bottom: 20px;
+
+.item-info-box{
+    margin:20px;
     border-radius: 10px;
     background-color: var(--shop-item-div-bg-color);
     font-size: 20px;
 }
 
+.item-info-box div{
+    margin: 20px;
+}
+
+.img-box{
+    margin: 20px;
+    border-radius: 10px;
+    display: flex;
+    align-items: stretch;
+    justify-content: stretch;
+    min-height: 200px;
+}
+
 /*
     set the first child of the item div (a image ) as the background of the item div
  */
-.item div:first-child{
+.img-box div:first-child{
     border: none;
     margin-top: 20px;
     margin-bottom: 20px;
     background-color: var(--shop-item-bg-color);
 }
 
-.item img {
-    width: 400px;
+.img-box button {
+    width: 100%;
+    height: 100%;
+    /*border: none;*/
+    padding: 0;
+    background: transparent;
+    display: flex;
+    align-items: stretch;
+    justify-content: stretch;
+    border-radius: 10px;
+}
+
+.img-box img{
+    width: 100%;
     height: 400px;
     border-radius: 10px;
-    border: 5px;
+    object-fit: fill;
 }
 
 /*
