--- a/templates/buyerItem.html
+++ b/templates/buyerItem.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/buyerItem.css') }}">
+{% endblock %}
+
 {% block script %}
     <script src="/static/js/render_buyer_purchased_items.js"></script>
     <script>
