--- a/static/css/base.css
+++ b/static/css/base.css
@@ -58,7 +58,7 @@
     --comment-button-hover-text-color: #007bff;
 
     /*buyerInfo.css*/
-    --buyer-info-bg-color: #bdbdbd;
+    --buyer-info-bg-color: #dad8d8;
 
     /*sellerAdd.css*/
     --seller-add-image-bg-color: white;
@@ -145,7 +145,7 @@
     --comment-button-hover-text-color: #d3d3d3;
 
     /*buyerInfo.css*/
-    --buyer-info-bg-color: #131313;
+    --buyer-info-bg-color: #343434;
 
     /*sellerAdd.css*/
     --seller-add-image-bg-color: #343a40;
