--- a/templates/buyerItemManage.html
+++ b/templates/buyerItemManage.html
@@ -5,11 +5,11 @@
     <script>
 
     window.onload = function (){
-        render_all_purchased_items($(".purchased-item-box"))
+        render_all_purchased_items($(".right-bar"))
     }
     </script>
 {% endblock %}
 
 {% block body %}
-    <div class="purchased-item-box"></div>
+    <div class="right-bar"></div>
 {% endblock %}
