--- a/templates/buyerManage.html
+++ b/templates/buyerManage.html
@@ -24,8 +24,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="user-info-box">
-
+    <div class="right-bar">
         <div class="img-div">
             <img class="user-image">
         </div>
