--- a/templates/logManage.html
+++ b/templates/logManage.html
@@ -12,18 +12,20 @@
 {% endblock %}
 
 {% block body %}
-<div class="log-button-box">
-    <button class="log-button" type="button" onclick="render_log($('.log-box'), '')">ALL</button>
-    <button class="log-button" type="button" onclick="render_log($('.log-box'), 'WARNING')">WARNING</button>
-    <button class="log-button" type="button" onclick="render_log($('.log-box'), 'INFO')">INFO</button>
-</div>
-<div class="log-container">
-    <div class="log-title">
-        <span class="log-type">Type</span>
-        <span class="log-time">Time</span>
-        <span class="log-phone">Phone</span>
-        <span class="log-content">Content</span>
+<div class="right-bar">
+    <div class="log-button-box">
+        <button class="log-button" type="button" onclick="render_log($('.log-box'), '')">ALL</button>
+        <button class="log-button" type="button" onclick="render_log($('.log-box'), 'WARNING')">WARNING</button>
+        <button class="log-button" type="button" onclick="render_log($('.log-box'), 'INFO')">INFO</button>
     </div>
-    <div class="log-box"></div>
+    <div class="log-container">
+        <div class="log-title">
+            <span class="log-type">Type</span>
+            <span class="log-time">Time</span>
+            <span class="log-phone">Phone</span>
+            <span class="log-content">Content</span>
+        </div>
+        <div class="log-box"></div>
+    </div>
 </div>
 {% endblock %}
