--- a/templates/sellerManage.html
+++ b/templates/sellerManage.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="user-info-box">
+    <div class="right-bar">
 
         <div class="img-div">
             <img class="user-image">
