--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -11,6 +11,7 @@
         const isAdmin = true;
     </script>
     {% block script %}{% endblock %}
+    {% block css %}{% endblock %}
 </head>
 <body>
 <div class="nav-bar">
